--- a/Book_management_ssm/pom.xml
+++ b/Book_management_ssm/pom.xml
@@ -130,6 +130,23 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+
+
+
+
+<!--    文件上传相关坐标-->
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+    </dependency>
   </dependencies>
 
   <build>
